# HydrogenEngine

./: .gitignore  CMakeLists.txt  MDRender copy.c  README.md
include/: HE_Game.h  HE_Input.h  HE_Object.h  HE_Palette.h  HE_Render.h  HE_SurfaceHelper.h  HE_Utils.h  HE_Window.h  HydrogenEngine.h  MD.h  MDGame.h  MDInput.h  MDObject.h  MDPalette.h  MDRender.h  MDSurfaceHelper.h  MDUtils.h  MDWindow.h
include/game/: Objects.h
src/: HE_Input.c  HE_Object.c  HE_Palette.c  HE_Render.c  HE_SurfaceHelper.c  HE_Utils.c  HE_Window.c  MDGame.c  MDInput.c  MDObject.c  MDPalette.c  MDRender.c  MDSurfaceHelper.c  MDUtils.c  MDWindow.c  main.c
src/game/: HE_Game.c  MDGame.c  SonicObject.c
